Elements bodies and headings are been putted succesfully

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -10,8 +10,8 @@
 <body>
   <h1>Available Recipes</h1>
   <a href="./recipes/pasta.html"></a>
-  <a href=""></a>
-  <a href=""></a>
+  <a href="./lasagna.html"></a>
+  <a href="./pizza.html"></a>
 </body>
 
 </html>
